# gamebub-handheld

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml  main.yml
docs/: accuracy.md  architecture.md  building.md  pynq.md  simulator.md
firmware/handheld/: Cargo.toml  bindings_esp_tinyusb.h  build.rs  espflash.toml  flash_nvs.py  partitions.csv  sdkconfig.defaults
firmware/handheld/.cargo/: config.toml
firmware/handheld/res/ui/: common.slint  icons.slint  main.slint
firmware/handheld/res/ui/components/: button.slint  file_list.slint  list_view.slint  power_menu.slint  screen.slint  scroll_view.slint  status_bar.slint  volume_bar.slint
firmware/handheld/res/ui/screens/: about.slint  error.slint  game.slint  main_menu.slint  rom_select.slint
firmware/handheld/res/ui/screens/settings/: components.slint  datetime.slint  list_box.slint  settings.slint  types.slint
firmware/handheld/res/ui/screens/tools/: tools.slint
firmware/handheld/src/: main.rs
firmware/handheld/src/bitstream/: gameboy.rs  mod.rs
firmware/handheld/src/bitstream/gba/: game_db.rs  mod.rs  rtc.rs  save_type_detector.rs
firmware/handheld/src/device/: input.rs  interrupt.rs  mod.rs
firmware/handheld/src/device/drivers/: dac.rs  fpga.rs  fuel_gauge.rs  imu.rs  io_expander.rs  lcd.rs  mod.rs  rtc.rs  sdcard.rs  usb.rs
firmware/handheld/src/kvs/: keys.rs  mod.rs
firmware/handheld/src/ui/: buttons.rs  mod.rs  slint.rs
firmware/handheld/src/ui/state/: game.rs  main_menu.rs  mod.rs  rom_select.rs  settings.rs  tools.rs
firmware/handheld/src/util/: background_io.rs  mod.rs
firmware/handheld/src/worker/: mod.rs
fpga/: build.sbt  build.sc  fusesoc.conf  gameboy.core
fpga/sim/: audio.cpp  audio.hpp  common.hpp  framebuffer.cpp  framebuffer.hpp  input.hpp  main.cpp  recording_writer.cpp  recording_writer.hpp  window.cpp  window.hpp
pcb/: .gitignore  Game_Bub.kicad_sym
(+200 files in other folders)
